--- a/style.css
+++ b/style.css
@@ -16,11 +16,18 @@ body {
 }
 
 .container {
-    width: 150px;
-    height: 150px;
+    width: 154px;
+    height: 154px;
+    border: 2px solid gray;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+}
+
+.eraser {
+    margin: 8px;
+    font-size: 5px;
+    
 }
